Updating app name.

--- a/Source/TreasureGuide.Web/App/views/shell.html
+++ b/Source/TreasureGuide.Web/App/views/shell.html
@@ -9,7 +9,7 @@
             </button>
             <a class="navbar-brand" href="#">
                 <i class="fa fa-home"></i>
-                <span>Durandal</span>
+                <span>Nakama</span>
             </a>
         </div>
 
