--- a/Source/TreasureGuide.Web/App/views/stages/index.html
+++ b/Source/TreasureGuide.Web/App/views/stages/index.html
@@ -1,5 +1,5 @@
 ﻿<section>
-    <h2 data-bind="text:displayName"></h2>
+    <h2 data-bind="text: DisplayName"></h2>
     <div class="panel-group" data-bind="foreach: Stages">
         <div class="panel panel-default">
             <div class="panel-heading">
