--- a/Source/TreasureGuide.Web/App/views/teams/index.html
+++ b/Source/TreasureGuide.Web/App/views/teams/index.html
@@ -1,5 +1,5 @@
 ﻿<section>
-    <h2 data-bind="text:displayName"></h2>
+    <h2 data-bind="text: DisplayName"></h2>
     <a class="btn btn-xl btn-success" href="/#teams/edit"><i class="fa fa-fw fa-plus"></i> Create New Team</a>
     <table class="table">
         <thead>
