--- a/Source/TreasureGuide.Web/App/views/flickr.html
+++ b/Source/TreasureGuide.Web/App/views/flickr.html
@@ -1,5 +1,5 @@
 ﻿<section>
-    <h2 data-bind="text: displayName"></h2>
+    <h2 data-bind="text: DisplayName"></h2>
     <div class="row" data-bind="foreach: images">
         <div class="col-sm-6 col-md-3">
             <a href="#" class="thumbnail" data-bind="click:$parent.select">
