--- a/Source/TreasureGuide.Web/App/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/App/views/teams/edit.html
@@ -1,5 +1,5 @@
 ﻿<section>
-    <h2 data-bind="text:displayName"></h2>
+    <h2 data-bind="text: DisplayName"></h2>
     <form>
         <div class="panel-group" data-bind="with: TeamModel">
             <div class="panel panel-default">
