--- a/Source/TreasureGuide.Web/App/views/welcome.html
+++ b/Source/TreasureGuide.Web/App/views/welcome.html
@@ -1,5 +1,5 @@
 ﻿<section>
-    <h2 data-bind="text:displayName"></h2>
+    <h2 data-bind="text:DisplayName"></h2>
     <blockquote data-bind="text:description"></blockquote>
     <h3>Features</h3>
     <ul data-bind="foreach: features">
