Adding layout and gulping.

--- a/Source/TreasureGuide.Web/Views/Home/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/Index.cshtml
@@ -1,5 +1,11 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<h1>Shukko Da!</h1>
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Aurelia</title>
+</head>
+<body aurelia-app="main">
+    <script src="~/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
+</body>
+</html>
