--- a/Source/TreasureGuide.Web/Views/Shared/_Layout.cshtml
+++ b/Source/TreasureGuide.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - TreasureGuide.Web</title>
+    <title>Nakama</title>
 </head>
 <body>
     @RenderBody()
