--- a/Source/TreasureGuide.Web/src/views/units/index.html
+++ b/Source/TreasureGuide.Web/src/views/units/index.html
@@ -1,7 +1,7 @@
 ﻿<template>
     <h1>${title}</h1>
     <div>
-        <table>
+        <table class="striped">
             <thead>
                 <tr>
                     <th>
