Materializing a few things.

--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -31,9 +31,9 @@
             </div>
         </form>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="button" name="action" click.delegate="submit()">
+            <button md-button="large: true" md-waves click.delegate="submit()">
                 Submit
-                <i class="material-icons right">send</i>
+                <i class="large material-icons right">send</i>
             </button>
         </div>
     </div>
