Updating some display stuff.

--- a/Source/TreasureGuide.Web/src/views/teams/index.html
+++ b/Source/TreasureGuide.Web/src/views/teams/index.html
@@ -6,7 +6,7 @@
             <i class="large material-icons">add</i>
         </a>
     </div>
-    <div>
+    <div class="row">
         <table class="striped">
             <thead>
                 <tr>
