--- a/Source/TreasureGuide.Web/src/views/units/index.html
+++ b/Source/TreasureGuide.Web/src/views/units/index.html
@@ -1,6 +1,6 @@
 ﻿<template>
     <h1>${title}</h1>
-    <div>
+    <div class="row">
         <table class="striped">
             <thead>
                 <tr>
