--- a/Source/TreasureGuide.Web/src/views/teams/index.html
+++ b/Source/TreasureGuide.Web/src/views/teams/index.html
@@ -3,7 +3,7 @@
     <div class="fixed-action-btn">
         <a md-button="floating: true; large: true" md-tooltip="position: left; text: Create New Team;"
            md-waves="color: light; circle: true;" route-href="route: teamCreate">
-            <i class="large material-icons">add</i>
+            <i class="material-icons large">add</i>
         </a>
     </div>
     <div class="row">
