--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -7,3 +7,18 @@
 main {
     flex: 1 0 auto;
 }
+
+.unit-button {
+    height: 112px;
+    width: 112px;
+    padding: 0;
+    margin: 0 10px;
+    line-height: 0;
+
+    img {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+    }
+}
