--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -12,7 +12,7 @@ main {
     height: 112px;
     width: 112px;
     padding: 0;
-    margin: 10px;
+    margin: 5px;
     line-height: 0;
 
     img {
@@ -23,7 +23,7 @@ main {
     }
 }
 
-team-display {
+.team-display {
     .row {
         margin: 0;
         padding: 0;
