Working more on team editing.

--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -4,7 +4,7 @@
         <form class="col s12" with.bind="team">
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix">tag_faces</i>
+                    <i class="material-icons prefix">label_outline</i>
                     <input type="text" id="team_name" class="validate" value.bind="name" />
                     <label for="team_name">Team Name</label>
                 </div>
