--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -1,40 +1,29 @@
 ﻿<template>
     <h1>${title}</h1>
-    <div class="row">
-        <form class="col s12" with.bind="team">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">label_outline</i>
-                    <input type="text" id="team_name" class="validate" value.bind="name" />
-                    <label for="team_name">Team Name</label>
-                </div>
-            </div>
-            <div class="row">
-                <team-display team.two-way="teamUnits" editable.bind="true"></team-display>
-            </div>
-            <div class="row">
-                <socket-picker sockets.two-way="teamSockets"></socket-picker>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">mode_edit</i>
-                    <textarea id="team_desc" class="materialize-textarea validate" value.bind="description"></textarea>
-                    <label for="team_desc">Team Description</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">assignment_ind</i>
-                    <textarea id="team_credit" class="materialize-textarea validate" value.bind="credits"></textarea>
-                    <label for="team_credit">Credits</label>
-                </div>
-            </div>
-        </form>
+    <form with.bind="team">
+        <div class="row">
+            <md-input md-type="text" md-label="Name" md-value.bind="name"></md-input>
+        </div>
+        <div class="row">
+            <team-display team.two-way="teamUnits" editable.bind="true"></team-display>
+        </div>
+        <div class="row">
+            <socket-picker sockets.two-way="teamSockets"></socket-picker>
+        </div>
+        <div class="row">
+            <md-input md-text-area="true" md-label="Description" md-value.bind="description"></md-input>
+        </div>
+        <div class="row">
+            <md-input md-text-area="true" md-label="Guide" md-value.bind="guide"></md-input>
+        </div>
+        <div class="row">
+            <md-input md-text-area="true" md-label="Credits" md-value.bind="credits"></md-input>
+        </div>
         <div class="row">
             <button md-button="large: true" md-waves click.delegate="submit()">
                 Submit
                 <i class="material-icons right large">send</i>
             </button>
         </div>
-    </div>
+    </form>
 </template>
