--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -23,9 +23,57 @@ main {
     }
 }
 
-.team-display {
-    .row {
-        margin: 0;
-        padding: 0;
+team-display {
+}
+
+team-display {
+    overflow: hidden;
+    white-space: nowrap;
+
+    &:not([in-line]) {
+        unit-display:nth-of-type(2n):after {
+            content: "";
+            display: block;
+        }
+    }
+
+    &[size="tiny"] {
+        .unit-button {
+            height: 24px;
+            width: 24px;
+            margin: 1px;
+        }
+    }
+
+    &[size="small"] {
+        .unit-button {
+            height: 42px;
+            width: 42px;
+            margin: 2px;
+        }
+    }
+
+    &[size="medium"] {
+        .unit-button {
+            height: 64px;
+            width: 64px;
+            margin: 3px;
+        }
+    }
+
+    &[size="large"] {
+        .unit-button {
+            height: 96px;
+            width: 96px;
+            margin: 4px;
+        }
+    }
+
+    &[size="huge"] {
+        .unit-button {
+            height: 112px;
+            width: 112px;
+            margin: 5px;
+        }
     }
 }
