--- a/Source/TreasureGuide.Web/src/views/teams/index.html
+++ b/Source/TreasureGuide.Web/src/views/teams/index.html
@@ -6,6 +6,39 @@
             <i class="material-icons large">add</i>
         </a>
     </div>
+    <form with.bind="searchModel">
+        <div class="row">
+            <div class="col s3">
+                <md-input md-label="Term" md-type="text" md-value.bind="term"></md-input>
+            </div>
+            <div class="col s3">
+                <md-input md-label="Leader" md-type="number" md-value.bind="leaderId"></md-input>
+            </div>
+            <div class="col s3">
+                <md-input md-label="Stage" md-type="number" md-value.bind="stageId"></md-input>
+            </div>
+            <div class="col s3">
+                <md-checkbox md-checked.bind="global">Global</md-checkbox>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s3">
+                <md-checkbox md-checked.bind="myBox">In my Box</md-checkbox>
+            </div>
+            <div class="col s3">
+                <md-input md-label="Page" md-type="number" md-value.bind="page"></md-input>
+            </div>
+            <div class="col s3">
+                <md-input md-label="Page Size" md-type="number" md-value.bind="pageSize"></md-input>
+            </div>
+            <div class="col s3">
+                <button md-button md-waves click.delegate="search()">
+                    <i class="material-icons left">search</i>
+                    Search
+                </button>
+            </div>
+        </div>
+    </form>
     <div class="row">
         <table class="striped">
             <thead>
