Fixing some editor stuff.

--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -1,6 +1,6 @@
 ﻿<template>
     <h1>${title}</h1>
-    <form with.bind="team">
+    <div class="center" with.bind="team">
         <div class="row">
             <md-input md-type="text" md-label="Name" md-value.bind="name"></md-input>
         </div>
@@ -25,5 +25,5 @@
                 <i class="material-icons right large">send</i>
             </button>
         </div>
-    </form>
+    </div>
 </template>
