Updating search methods and more.

--- a/Source/TreasureGuide.Web/src/views/teams/index.html
+++ b/Source/TreasureGuide.Web/src/views/teams/index.html
@@ -13,10 +13,13 @@
                     <md-input md-label="Term" md-type="text" md-value.two-way="term"></md-input>
                 </div>
                 <div class="row">
-                    <div class="col m6">
+                    <div class="col m4">
                         <md-checkbox md-checked.two-way="global">Global</md-checkbox>
                     </div>
-                    <div class="col m6">
+                    <div class="col m4">
+                        <md-checkbox md-checked.two-way="freeToPlay">Free to Play</md-checkbox>
+                    </div>
+                    <div class="col m4">
                         <md-checkbox md-checked.two-way="myBox">In my Box</md-checkbox>
                     </div>
                 </div>
