Building custom materialize.

--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -1,5 +1,6 @@
 ﻿@import "../../node_modules/materialize-css/sass/components/_color.scss";
 @import "../../node_modules/materialize-css/sass/components/_variables.scss";
+@import "./materialize/_custom-variables.scss";
 
 body {
     display: flex;
