--- a/Source/TreasureGuide.Web/src/views/teams/index.html
+++ b/Source/TreasureGuide.Web/src/views/teams/index.html
@@ -33,9 +33,10 @@
         </form>
     </div>
     <div class="row center" if.bind="pages > 1">
-        <md-pagination md-pages.bind="pages" md-active-page.bind="search.page" md-on-page-changed.delegate="onPageChanged($event)"></md-pagination>
+        <md-pagination md-pages.bind="pages" md-active-page.bind="searchModel.page" md-on-page-changed.delegate="onPageChanged($event)"></md-pagination>
     </div>
     <div class="row" if.bind="teams.length > 0">
+        <p>${((searchModel.page - 1) * searchModel.pageSize) + 1} - ${((searchModel.page - 1) * searchModel.pageSize) + teams.length} of ${resultCount}</p>
         <table class="striped">
             <thead>
                 <tr>
@@ -78,6 +79,6 @@
         <h3>Search yielded no results!</h3>
     </div>
     <div class="row center" if.bind="pages > 1">
-        <md-pagination md-pages.bind="pages" md-active-page.bind="search.page" md-on-page-changed.delegate="onPageChanged($event)"></md-pagination>
+        <md-pagination md-pages.bind="pages" md-active-page.bind="searchModel.page" md-on-page-changed.delegate="onPageChanged($event)"></md-pagination>
     </div>
 </template>
