--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -5,7 +5,7 @@
             <md-input md-type="text" md-label="Name" md-value.bind="name"></md-input>
         </div>
         <div class="row">
-            <team-display team.two-way="teamUnits" editable.bind="true"></team-display>
+            <team-display team.two-way="teamUnits" ship.two-way="shipId" editable.bind="true"></team-display>
         </div>
         <div class="row">
             <socket-picker sockets.two-way="teamSockets"></socket-picker>
