--- a/Source/TreasureGuide.Web/src/views/teams/index.html
+++ b/Source/TreasureGuide.Web/src/views/teams/index.html
@@ -28,7 +28,7 @@
                 <unit-display unit-id.two-way="leaderId" editable="true"></unit-display>
             </div>
             <div class="col m3">
-                <md-input md-label="Stage" md-type="number" md-value.two-way="stageId"></md-input>
+                <stage-display editable="true" stage-id.bind="stageId"></stage-display>
             </div>
         </form>
     </div>
