--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -34,6 +34,19 @@ $huge-unit-margin: 5px;
 $default-unit-size: $huge-unit-size;
 $default-unit-margin: $huge-unit-margin;
 
+.stage-collection {
+    .row {
+        padding: 0;
+        margin: 0;
+    }
+
+    button {
+        width: 100%;
+        height: 100%;
+        text-align: left;
+    }
+}
+
 .unit-collection {
     .unit-button {
         @media #{$medium-and-down} {
