--- a/Source/TreasureGuide.Web/src/views/teams/index.html
+++ b/Source/TreasureGuide.Web/src/views/teams/index.html
@@ -10,7 +10,7 @@
         <form with.bind="searchModel">
             <div class="col m6">
                 <div class="row">
-                    <md-input md-label="Term" md-type="text" md-value.two-way="term"></md-input>
+                    <md-input md-label="Name" md-type="text" md-value.two-way="term"></md-input>
                 </div>
                 <div class="row">
                     <div class="col m4">
@@ -50,6 +50,9 @@
                         Units
                     </th>
                     <th>
+                        Stage
+                    </th>
+                    <th>
                         Actions
                     </th>
                 </tr>
@@ -64,6 +67,9 @@
                     </td>
                     <td>
                         <team-display team.bind="team.teamUnits" size="small" in-line></team-display>
+                    </td>
+                    <td>
+                        <stage-display stage-id.bind="team.stageId"></stage-display>
                     </td>
                     <td>
                         <a md-button md-waves route-href="route: teamEdit; params.bind: {id: team.id}">
