Fixing detail page.

--- a/Source/TreasureGuide.Web/src/views/teams/detail.html
+++ b/Source/TreasureGuide.Web/src/views/teams/detail.html
@@ -3,37 +3,36 @@
     <h1>${title}</h1>
     <div with.bind="team">
         <div class="row">
-            <h2>Name</h2>
-            <p>${name}</p>
+            <h2>${name}</h2>
         </div>
-        <div class="row">
-            <h2>Stage</h2>
+        <div class="row" if.bind="stageId">
+            <h3>Stage</h3>
             <stage-display stage-id.bind="stageId"></stage-display>
         </div>
         <div class="row">
-            <h2>Team</h2>
+            <h3>Team</h3>
             <div class="center">
                 <team-display team.bind="teamUnits"
                               ship.bind="shipId">
                 </team-display>
             </div>
         </div>
-        <div class="row">
-            <h2>Sockets</h2>
+        <div class="row" if.bind="teamSockets && teamSockets.length > 0">
+            <h3>Sockets</h3>
             <div class="center">
                 <socket-picker sockets.two-way="teamSockets"></socket-picker>
             </div>
         </div>
-        <div class="row">
-            <h2>Description</h2>
+        <div class="row" if.bind="description">
+            <h3>Description</h3>
             <p>${description}</p>
         </div>
-        <div class="row">
-            <h2>Guide</h2>
+        <div class="row" if.bind="guide">
+            <h3>Guide</h3>
             <p>${guide}</p>
         </div>
-        <div class="row">
-            <h2>Credits</h2>
+        <div class="row" if.bind="credits">
+            <h3>Credits</h3>
             <p>${credits}</p>
         </div>
     </div>
