Trying to fix text area inputs but there appears to be an issue with my css or something.

--- a/Source/TreasureGuide.Web/Views/Home/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/Index.cshtml
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Nakama</title>
 </head>
-<body aurelia-app="main">
-    <h1>Loading...</h1>
-    <script src="~/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
+<body>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <div class="hiddendiv"></div>
+    <div aurelia-app="main">
+        <h1>Loading...</h1>
+        <script src="~/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
+    </div>
 </body>
 </html>
