--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -24,18 +24,21 @@
                       md-label="Description"
                       md-validate="true"
                       md-char-counter="length: 1000"
+                      md-text-area="true"
                       md-value.bind="description & validate"></md-input>
         </div>
         <div class="row">
             <md-input md-text-area="true"
                       md-label="Guide"
                       md-char-counter="length: 10000"
+                      md-text-area="true"
                       md-value.bind="guide & validate"></md-input>
         </div>
         <div class="row">
             <md-input md-text-area="true"
                       md-label="Credits"
                       md-char-counter="length: 250"
+                      md-text-area="true"
                       md-value.bind="credits & validate"></md-input>
         </div>
         <div class="row right">
