--- a/Source/TreasureGuide.Web/Views/Home/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Nakama</title>
+    <title>NakamaDB</title>
 </head>
 <body>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
