--- a/Source/TreasureGuide.Web/src/views/admin/index.html
+++ b/Source/TreasureGuide.Web/src/views/admin/index.html
@@ -1,4 +1,4 @@
 ﻿<template>
-    <h1>${message}</h1>
+    <h1>${title}</h1>
     <button md-button md-waves click.delegate="createTeam()">Create a Fake Team</button>
 </template>
